--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,12 @@
 name = "wird"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/XToripuru/wird"
+description = """
+Write Javascript with inlined Rust that will later become Wasm
+"""
+keywords = ["wasm", "javascript"]
 
 [dependencies]
